--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.0",
+    "@simplewebauthn/server": "^13.2.0",
     "hono": "^4.0.0",
     "zod": "^3.22.0"
   },
