--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "start": "next start",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -75,15 +78,18 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.5.3",
     "glob": "^9.0.0",
+    "jsdom": "^27.0.0",
     "postcss": "^8.5",
     "prettier": "^3.0.0",
     "rimraf": "^6.0.0",
     "tailwindcss": "^4.1.9",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
